y.output
Terminals which are not used

   ARROW


State 2 conflicts: 2 reduce/reduce
State 176 conflicts: 2 reduce/reduce
State 215 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list
    2        | /* empty */

    3 statement_list: statement
    4               | statement_list statement

    5 statement: simple_stmt NEWLINE
    6          | compound_stmt
    7          | NEWLINE
    8          | error NEWLINE

    9 simple_stmt: aug_assignment
   10            | assignment
   11            | expression
   12            | return_stmt
   13            | break_stmt
   14            | continue_stmt
   15            | pass_stmt
   16            | import_stmt
   17            | global_stmt
   18            | assert_stmt
   19            | raise_stmt
   20            | del_stmt

   21 compound_stmt: function_def
   22              | if_stmt
   23              | while_stmt
   24              | for_stmt
   25              | try_stmt

   26 suite: NEWLINE INDENT statement_list DEDENT

   27 function_def: decorator_list DEF IDENTIFIER OPEN_PAREN param_list_opt CLOSE_PAREN COLON suite
   28             | decorator_list DEF IDENTIFIER OPEN_PAREN param_list_opt CLOSE_PAREN MINUS GREATER_THAN dotted_name COLON suite

   29 decorator_list: /* empty */
   30               | decorator_list decorator

   31 decorator: AT_SIGN dotted_name NEWLINE
   32          | AT_SIGN dotted_name OPEN_PAREN arg_list_opt CLOSE_PAREN NEWLINE

   33 dotted_name: IDENTIFIER
   34            | dotted_name DOT IDENTIFIER

   35 param_list_opt: /* empty */
   36               | param_list

   37 param_list: param
   38           | param_list COMMA param

   39 param: IDENTIFIER
   40      | IDENTIFIER COLON dotted_name
   41      | IDENTIFIER EQUAL expression
   42      | IDENTIFIER COLON dotted_name EQUAL expression
   43      | MULTIPLY IDENTIFIER
   44      | POWER IDENTIFIER

   45 import_stmt: IMPORT dotted_name
   46            | IMPORT dotted_name AS IDENTIFIER
   47            | FROM dotted_name IMPORT import_list
   48            | FROM dotted_name IMPORT MULTIPLY

   49 import_list: IDENTIFIER
   50            | IDENTIFIER AS IDENTIFIER
   51            | import_list COMMA IDENTIFIER
   52            | import_list COMMA IDENTIFIER AS IDENTIFIER

   53 if_stmt: IF expression COLON suite elif_list else_opt

   54 elif_list: /* empty */
   55          | elif_list ELIF expression COLON suite

   56 else_opt: /* empty */
   57         | ELSE COLON suite

   58 while_stmt: WHILE expression COLON suite else_opt

   59 for_stmt: FOR target IN expression COLON suite else_opt

   60 try_stmt: TRY COLON suite except_list else_opt

   61 except_list: except_clause
   62            | except_list except_clause

   63 except_clause: EXCEPT COLON suite
   64              | EXCEPT expression COLON suite
   65              | EXCEPT expression AS IDENTIFIER COLON suite

   66 assignment: target EQUAL expression
   67           | target COLON dotted_name EQUAL expression
   68           | target COLON dotted_name

   69 aug_assignment: target aug_op expression

   70 aug_op: PLUS_EQ
   71       | MINUS_EQ
   72       | MULTIPLY_EQ
   73       | DIVIDE_EQ
   74       | MODULO_EQ
   75       | POWER_EQ
   76       | FLOOR_DIV_EQ

   77 target: IDENTIFIER
   78       | atom_expr DOT IDENTIFIER
   79       | atom_expr OPEN_BRACKET expression CLOSE_BRACKET

   80 return_stmt: RETURN
   81            | RETURN expression

   82 break_stmt: BREAK

   83 continue_stmt: CONTINUE

   84 pass_stmt: PASS

   85 global_stmt: GLOBAL identifier_list

   86 identifier_list: IDENTIFIER
   87                | identifier_list COMMA IDENTIFIER

   88 assert_stmt: ASSERT expression
   89            | ASSERT expression COMMA expression

   90 raise_stmt: RAISE
   91           | RAISE expression

   92 del_stmt: DEL target

   93 expression: expression OR expression
   94           | expression AND expression
   95           | NOT expression
   96           | expression LESS_THAN expression
   97           | expression GREATER_THAN expression
   98           | expression DOUBLE_EQUAL expression
   99           | expression NOT_EQUAL expression
  100           | expression LESS_EQUAL expression
  101           | expression GREATER_EQUAL expression
  102           | expression IS expression
  103           | expression IN expression
  104           | expression BIT_OR expression
  105           | expression BIT_XOR expression
  106           | expression BIT_AND expression
  107           | expression LEFT_SHIFT expression
  108           | expression RIGHT_SHIFT expression
  109           | expression PLUS expression
  110           | expression MINUS expression
  111           | expression MULTIPLY expression
  112           | expression DIVIDE expression
  113           | expression FLOOR_DIV expression
  114           | expression MODULO expression
  115           | expression POWER expression
  116           | MINUS expression
  117           | PLUS expression
  118           | BIT_NOT expression
  119           | atom_expr

  120 atom_expr: atom
  121          | atom_expr OPEN_PAREN arg_list_opt CLOSE_PAREN
  122          | atom_expr OPEN_BRACKET expression CLOSE_BRACKET
  123          | atom_expr DOT IDENTIFIER

  124 atom: IDENTIFIER
  125     | INT
  126     | FLOAT
  127     | SCIENTIFIC
  128     | STRING
  129     | TRUE
  130     | FALSE
  131     | NONE
  132     | OPEN_PAREN expression CLOSE_PAREN
  133     | OPEN_PAREN tuple_items CLOSE_PAREN
  134     | OPEN_BRACKET expr_list_opt CLOSE_BRACKET
  135     | OPEN_BRACE dict_items_opt CLOSE_BRACE

  136 tuple_items: expression COMMA
  137            | expression COMMA expression
  138            | tuple_items COMMA expression

  139 arg_list_opt: /* empty */
  140             | arg_list

  141 arg_list: arg
  142         | arg_list COMMA arg

  143 arg: expression
  144    | IDENTIFIER EQUAL expression
  145    | MULTIPLY expression
  146    | POWER expression

  147 expr_list_opt: /* empty */
  148              | expr_list

  149 expr_list: expression
  150          | expr_list COMMA expression
  151          | expr_list COMMA

  152 dict_items_opt: /* empty */
  153               | dict_items

  154 dict_items: expression COLON expression
  155           | dict_items COMMA expression COLON expression


Terminals, with rules where they appear

$end (0) 0
error (256) 8
IDENTIFIER (258) 27 28 33 34 39 40 41 42 43 44 46 49 50 51 52 65 77
    78 86 87 123 124 144
INT (259) 125
FLOAT (260) 126
SCIENTIFIC (261) 127
STRING (262) 128
DEF (263) 27 28
FOR (264) 59
IF (265) 53
ELSE (266) 57
ELIF (267) 55
WHILE (268) 58
IMPORT (269) 45 46 47 48
AS (270) 46 50 52 65
IN (271) 59 103
TRUE (272) 129
FALSE (273) 130
NONE (274) 131
RETURN (275) 80 81
BREAK (276) 82
CONTINUE (277) 83
PASS (278) 84
AND (279) 94
OR (280) 93
NOT (281) 95
IS (282) 102
ASSERT (283) 88 89
FROM (284) 47 48
TRY (285) 60
EXCEPT (286) 63 64 65
GLOBAL (287) 85
RAISE (288) 90 91
DEL (289) 92
PLUS (290) 109 117
MINUS (291) 28 110 116
MULTIPLY (292) 43 48 111 145
DIVIDE (293) 112
POWER (294) 44 115 146
FLOOR_DIV (295) 113
MODULO (296) 114
EQUAL (297) 41 42 66 67 144
LESS_THAN (298) 96
GREATER_THAN (299) 28 97
NOT_EQUAL (300) 99
LESS_EQUAL (301) 100
GREATER_EQUAL (302) 101
DOUBLE_EQUAL (303) 98
BIT_AND (304) 106
BIT_OR (305) 104
BIT_NOT (306) 118
BIT_XOR (307) 105
LEFT_SHIFT (308) 107
RIGHT_SHIFT (309) 108
DOT (310) 34 78 123
COMMA (311) 38 51 52 87 89 136 137 138 142 150 151 155
COLON (312) 27 28 40 42 53 55 57 58 59 60 63 64 65 67 68 154 155
AT_SIGN (313) 31 32
OPEN_PAREN (314) 27 28 32 121 132 133
CLOSE_PAREN (315) 27 28 32 121 132 133
OPEN_BRACKET (316) 79 122 134
CLOSE_BRACKET (317) 79 122 134
OPEN_BRACE (318) 135
CLOSE_BRACE (319) 135
NEWLINE (320) 5 7 8 26 31 32
INDENT (321) 26
DEDENT (322) 26
PLUS_EQ (323) 70
MINUS_EQ (324) 71
MULTIPLY_EQ (325) 72
DIVIDE_EQ (326) 73
MODULO_EQ (327) 74
POWER_EQ (328) 75
FLOOR_DIV_EQ (329) 76
ARROW (330)
UMINUS (331)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
program (78)
    on left: 1 2, on right: 0
statement_list (79)
    on left: 3 4, on right: 1 4 26
statement (80)
    on left: 5 6 7 8, on right: 3 4
simple_stmt (81)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20, on right: 5
compound_stmt (82)
    on left: 21 22 23 24 25, on right: 6
suite (83)
    on left: 26, on right: 27 28 53 55 57 58 59 60 63 64 65
function_def (84)
    on left: 27 28, on right: 21
decorator_list (85)
    on left: 29 30, on right: 27 28 30
decorator (86)
    on left: 31 32, on right: 30
dotted_name (87)
    on left: 33 34, on right: 28 31 32 34 40 42 45 46 47 48 67 68
param_list_opt (88)
    on left: 35 36, on right: 27 28
param_list (89)
    on left: 37 38, on right: 36 38
param (90)
    on left: 39 40 41 42 43 44, on right: 37 38
import_stmt (91)
    on left: 45 46 47 48, on right: 16
import_list (92)
    on left: 49 50 51 52, on right: 47 51 52
if_stmt (93)
    on left: 53, on right: 22
elif_list (94)
    on left: 54 55, on right: 53 55
else_opt (95)
    on left: 56 57, on right: 53 58 59 60
while_stmt (96)
    on left: 58, on right: 23
for_stmt (97)
    on left: 59, on right: 24
try_stmt (98)
    on left: 60, on right: 25
except_list (99)
    on left: 61 62, on right: 60 62
except_clause (100)
    on left: 63 64 65, on right: 61 62
assignment (101)
    on left: 66 67 68, on right: 10
aug_assignment (102)
    on left: 69, on right: 9
aug_op (103)
    on left: 70 71 72 73 74 75 76, on right: 69
target (104)
    on left: 77 78 79, on right: 59 66 67 68 69 92
return_stmt (105)
    on left: 80 81, on right: 12
break_stmt (106)
    on left: 82, on right: 13
continue_stmt (107)
    on left: 83, on right: 14
pass_stmt (108)
    on left: 84, on right: 15
global_stmt (109)
    on left: 85, on right: 17
identifier_list (110)
    on left: 86 87, on right: 85 87
assert_stmt (111)
    on left: 88 89, on right: 18
raise_stmt (112)
    on left: 90 91, on right: 19
del_stmt (113)
    on left: 92, on right: 20
expression (114)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113 114 115 116 117 118 119, on right: 11 41 42
    53 55 58 59 64 65 66 67 69 79 81 88 89 91 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 118 122 132 136 137 138 143 144 145 146 149 150 154 155
atom_expr (115)
    on left: 120 121 122 123, on right: 78 79 119 121 122 123
atom (116)
    on left: 124 125 126 127 128 129 130 131 132 133 134 135,
    on right: 120
tuple_items (117)
    on left: 136 137 138, on right: 133 138
arg_list_opt (118)
    on left: 139 140, on right: 32 121
arg_list (119)
    on left: 141 142, on right: 140 142
arg (120)
    on left: 143 144 145 146, on right: 141 142
expr_list_opt (121)
    on left: 147 148, on right: 134
expr_list (122)
    on left: 149 150 151, on right: 148 150 151
dict_items_opt (123)
    on left: 152 153, on right: 135
dict_items (124)
    on left: 154 155, on right: 153 155


state 0

    0 $accept: . program $end

    error         shift, and go to state 1
    IDENTIFIER    shift, and go to state 2
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    FOR           shift, and go to state 7
    IF            shift, and go to state 8
    WHILE         shift, and go to state 9
    IMPORT        shift, and go to state 10
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    RETURN        shift, and go to state 14
    BREAK         shift, and go to state 15
    CONTINUE      shift, and go to state 16
    PASS          shift, and go to state 17
    NOT           shift, and go to state 18
    ASSERT        shift, and go to state 19
    FROM          shift, and go to state 20
    TRY           shift, and go to state 21
    GLOBAL        shift, and go to state 22
    RAISE         shift, and go to state 23
    DEL           shift, and go to state 24
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30
    NEWLINE       shift, and go to state 31

    $end     reduce using rule 2 (program)
    DEF      reduce using rule 29 (decorator_list)
    AT_SIGN  reduce using rule 29 (decorator_list)

    program         go to state 32
    statement_list  go to state 33
    statement       go to state 34
    simple_stmt     go to state 35
    compound_stmt   go to state 36
    function_def    go to state 37
    decorator_list  go to state 38
    import_stmt     go to state 39
    if_stmt         go to state 40
    while_stmt      go to state 41
    for_stmt        go to state 42
    try_stmt        go to state 43
    assignment      go to state 44
    aug_assignment  go to state 45
    target          go to state 46
    return_stmt     go to state 47
    break_stmt      go to state 48
    continue_stmt   go to state 49
    pass_stmt       go to state 50
    global_stmt     go to state 51
    assert_stmt     go to state 52
    raise_stmt      go to state 53
    del_stmt        go to state 54
    expression      go to state 55
    atom_expr       go to state 56
    atom            go to state 57


state 1

    8 statement: error . NEWLINE

    NEWLINE  shift, and go to state 58


state 2

   77 target: IDENTIFIER .
  124 atom: IDENTIFIER .

    IN            reduce using rule 77 (target)
    IN            [reduce using rule 124 (atom)]
    EQUAL         reduce using rule 77 (target)
    COLON         reduce using rule 77 (target)
    NEWLINE       reduce using rule 77 (target)
    NEWLINE       [reduce using rule 124 (atom)]
    PLUS_EQ       reduce using rule 77 (target)
    MINUS_EQ      reduce using rule 77 (target)
    MULTIPLY_EQ   reduce using rule 77 (target)
    DIVIDE_EQ     reduce using rule 77 (target)
    MODULO_EQ     reduce using rule 77 (target)
    POWER_EQ      reduce using rule 77 (target)
    FLOOR_DIV_EQ  reduce using rule 77 (target)
    $default      reduce using rule 124 (atom)


state 3

  125 atom: INT .

    $default  reduce using rule 125 (atom)


state 4

  126 atom: FLOAT .

    $default  reduce using rule 126 (atom)


state 5

  127 atom: SCIENTIFIC .

    $default  reduce using rule 127 (atom)


state 6

  128 atom: STRING .

    $default  reduce using rule 128 (atom)


state 7

   59 for_stmt: FOR . target IN expression COLON suite else_opt

    IDENTIFIER    shift, and go to state 2
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    target     go to state 59
    atom_expr  go to state 60
    atom       go to state 57


state 8

   53 if_stmt: IF . expression COLON suite elif_list else_opt

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 62
    atom_expr   go to state 63
    atom        go to state 57


state 9

   58 while_stmt: WHILE . expression COLON suite else_opt

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 64
    atom_expr   go to state 63
    atom        go to state 57


state 10

   45 import_stmt: IMPORT . dotted_name
   46            | IMPORT . dotted_name AS IDENTIFIER

    IDENTIFIER  shift, and go to state 65

    dotted_name  go to state 66


state 11

  129 atom: TRUE .

    $default  reduce using rule 129 (atom)


state 12

  130 atom: FALSE .

    $default  reduce using rule 130 (atom)


state 13

  131 atom: NONE .

    $default  reduce using rule 131 (atom)


state 14

   80 return_stmt: RETURN .
   81            | RETURN . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    $default  reduce using rule 80 (return_stmt)

    expression  go to state 67
    atom_expr   go to state 63
    atom        go to state 57


state 15

   82 break_stmt: BREAK .

    $default  reduce using rule 82 (break_stmt)


state 16

   83 continue_stmt: CONTINUE .

    $default  reduce using rule 83 (continue_stmt)


state 17

   84 pass_stmt: PASS .

    $default  reduce using rule 84 (pass_stmt)


state 18

   95 expression: NOT . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 68
    atom_expr   go to state 63
    atom        go to state 57


state 19

   88 assert_stmt: ASSERT . expression
   89            | ASSERT . expression COMMA expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 69
    atom_expr   go to state 63
    atom        go to state 57


state 20

   47 import_stmt: FROM . dotted_name IMPORT import_list
   48            | FROM . dotted_name IMPORT MULTIPLY

    IDENTIFIER  shift, and go to state 65

    dotted_name  go to state 70


state 21

   60 try_stmt: TRY . COLON suite except_list else_opt

    COLON  shift, and go to state 71


state 22

   85 global_stmt: GLOBAL . identifier_list

    IDENTIFIER  shift, and go to state 72

    identifier_list  go to state 73


state 23

   90 raise_stmt: RAISE .
   91           | RAISE . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    $default  reduce using rule 90 (raise_stmt)

    expression  go to state 74
    atom_expr   go to state 63
    atom        go to state 57


state 24

   92 del_stmt: DEL . target

    IDENTIFIER    shift, and go to state 2
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    target     go to state 75
    atom_expr  go to state 60
    atom       go to state 57


state 25

  117 expression: PLUS . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 76
    atom_expr   go to state 63
    atom        go to state 57


state 26

  116 expression: MINUS . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 77
    atom_expr   go to state 63
    atom        go to state 57


state 27

  118 expression: BIT_NOT . expression

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression  go to state 78
    atom_expr   go to state 63
    atom        go to state 57


state 28

  132 atom: OPEN_PAREN . expression CLOSE_PAREN
  133     | OPEN_PAREN . tuple_items CLOSE_PAREN

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    expression   go to state 79
    atom_expr    go to state 63
    atom         go to state 57
    tuple_items  go to state 80


state 29

  134 atom: OPEN_BRACKET . expr_list_opt CLOSE_BRACKET

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    $default  reduce using rule 147 (expr_list_opt)

    expression     go to state 81
    atom_expr      go to state 63
    atom           go to state 57
    expr_list_opt  go to state 82
    expr_list      go to state 83


state 30

  135 atom: OPEN_BRACE . dict_items_opt CLOSE_BRACE

    IDENTIFIER    shift, and go to state 61
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    NOT           shift, and go to state 18
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30

    $default  reduce using rule 152 (dict_items_opt)

    expression      go to state 84
    atom_expr       go to state 63
    atom            go to state 57
    dict_items_opt  go to state 85
    dict_items      go to state 86


state 31

    7 statement: NEWLINE .

    $default  reduce using rule 7 (statement)


state 32

    0 $accept: program . $end

    $end  shift, and go to state 87


state 33

    1 program: statement_list .
    4 statement_list: statement_list . statement

    error         shift, and go to state 1
    IDENTIFIER    shift, and go to state 2
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    SCIENTIFIC    shift, and go to state 5
    STRING        shift, and go to state 6
    FOR           shift, and go to state 7
    IF            shift, and go to state 8
    WHILE         shift, and go to state 9
    IMPORT        shift, and go to state 10
    TRUE          shift, and go to state 11
    FALSE         shift, and go to state 12
    NONE          shift, and go to state 13
    RETURN        shift, and go to state 14
    BREAK         shift, and go to state 15
    CONTINUE      shift, and go to state 16
    PASS          shift, and go to state 17
    NOT           shift, and go to state 18
    ASSERT        shift, and go to state 19
    FROM          shift, and go to state 20
    TRY           shift, and go to state 21
    GLOBAL        shift, and go to state 22
    RAISE         shift, and go to state 23
    DEL           shift, and go to state 24
    PLUS          shift, and go to state 25
    MINUS         shift, and go to state 26
    BIT_NOT       shift, and go to state 27
    OPEN_PAREN    shift, and go to state 28
    OPEN_BRACKET  shift, and go to state 29
    OPEN_BRACE    shift, and go to state 30
    NEWLINE       shift, and go to state 31

    $end     reduce using rule 1 (program)
    DEF      reduce using rule 29 (decorator_list)
    AT_SIGN  reduce using rule 29 (decorator_list)

    statement       go to state 88
    simple_stmt     go to state 35
    compound_stmt   go to state 36
    function_def    go to state 37
    decorator_list  go to state 38
    import_stmt     go to state 39
    if_stmt         go to state 40
    while_stmt      go to state 41
    for_stmt        go to state 42
    try_stmt        go to state 43
    assignment      go to state 44
    aug_assignment  go to state 45
    target          go to state 46
    return_stmt     go to state 47
    break_stmt      go to state 48
    continue_stmt   go to state 49
    pass_stmt       go to state 50
    global_stmt     go to state 51
    assert_stmt     go to state 52
    raise_stmt      go to state 53
    del_stmt        go to state 54
    expression      go to state 55
    atom_expr       go to state 56
    atom            go to state 57


state 34

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


state 35

    5 statement: simple_stmt . NEWLINE

    NEWLINE  shift, and go to state 89


state 36

    6 statement: compound_stmt .

    $default  reduce using rule 6 (statement)


state 37

   21 compound_stmt: function_def .

    $default  reduce using rule 21 (compound_stmt)


state 38

   27 function_def: decorator_list . DEF IDENTIFIER OPEN_PAREN param_list_opt CLOSE_PAREN COLON suite
   28             | decorator_list . DEF IDENTIFIER OPEN_PAREN param_list_opt CLOSE_PAREN MINUS GREATER_THAN dotted_name COLON suite
   30 decorator_list: decorator_list . decorator

    DEF      shift, and go to state 90
    AT_SIGN  shift, and go to state 91

    decorator  go to state 92


state 39

   16 simple_stmt: import_stmt .

    $default  reduce using rule 16 (simple_stmt)


state 40

   22 compound_stmt: if_stmt .

    $default  reduce using rule 22 (compound_stmt)


state 41

   23 compound_stmt: while_stmt .

    $default  reduce using rule 23 (compound_stmt)


state 42

   24 compound_stmt: for_stmt .

    $default  reduce using rule 24 (compound_stmt)


state 43

   25 compound_stmt: try_stmt .

    $default  reduce using rule 25 (compound_stmt)


state 44

   10 simple_stmt: assignment .

    $default  reduce using rule 10 (simple_stmt)


state 45

    9 simple_stmt: aug_assignment .

    $default  reduce using rule 9 (simple_stmt)


state 46

   66 assignment: target . EQUAL expression
   67           | target . COLON dotted_name EQUAL expression
   68           | target . COLON dotted_name
   69 aug_assignment: target . aug_op expression

    EQUAL         shift, and go to state 93
    COLON         shift, and go to state 94
    PLUS_EQ       shift, and go to state 95
    MINUS_EQ      shift, and go to state 96
    MULTIPLY_EQ   shift, and go to state 97
    DIVIDE_EQ     shift, and go to state 98
    MODULO_EQ     shift, and go to state 99
    POWER_EQ      shift, and go to state 100
    FLOOR_DIV_EQ  shift, and go to state 101

    aug_op  go to state 102


state 47

   12 simple_stmt: return_stmt .

    $default  reduce using rule 12 (simple_stmt)


state 48

   13 simple_stmt: break_stmt .

    $default  reduce using rule 13 (simple_stmt)


state 49

   14 simple_stmt: continue_stmt .

    $default  reduce using rule 14 (simple_stmt)


state 50

   15 simple_stmt: pass_stmt .

    $default  reduce using rule 15 (simple_stmt)


state 51

   17 simple_stmt: global_stmt .

    $default  reduce using rule 17 (simple_stmt)


state 52

   18 simple_stmt: assert_stmt .

    $default  reduce using rule 18 (simple_stmt)


state 53

   19 simple_stmt: raise_stmt .

    $default  reduce using rule 19 (simple_stmt)


state 54

   20 simple_stmt: del_stmt .

    $default  reduce using rule 20 (simple_stmt)


state 55

   11 simple_stmt: expression .
   93 expression: expression . OR expression
   94           | expression . AND expression
   96           | expression . LESS_THAN expression
   97           | expression . GREATER_THAN expression
   98           | expression . DOUBLE_EQUAL expression
   99           | expression . NOT_EQUAL expression
  100           | expression . LESS_EQUAL expression
  101           | expression . GREATER_EQUAL expression
  102           | expression . IS expression
  103           | expression . IN expression
  104           | expression . BIT_OR expression
  105           | expression . BIT_XOR expression
  106           | expression . BIT_AND expression
  107           | expression . LEFT_SHIFT expression
  108           | expression . RIGHT_SHIFT expression
  109           | expression . PLUS expression
  110           | expression . MINUS expression
  111           | expression . MULTIPLY expression
  112           | expression . DIVIDE expression
  113           | expression . FLOOR_DIV expression
  114           | expression . MODULO expression
  115           | expression . POWER expression
